--- a/src/main/resources/templates/Fragments/Fragments2.html
+++ b/src/main/resources/templates/Fragments/Fragments2.html
@@ -50,12 +50,24 @@
                 <input type="email" name="email" id="email" class="form-control" placeholder="example@gmail.com" th:field="*{email}">
                 <label for="email">Enter Your  Email</label>
             </div>
-            <select class="form-select mb-2" aria-label="Default select example" name="studyYear" th:field="*{studyingYear}">
-                <option th:value="Select_Year" selected>Select Year</option>
+            <select class="form-select mb-2" aria-label="Default select example" name="department" th:field="*{department}">
+                <option th:value="Select_Year" selected>Select Department</option>
+                <option th:value="Information_Technology">Information Technology</option>
+                <option th:value="Computer_Science_Engineering">Computer Science and Engineering</option>
+                <option th:value="Civil_Engineering">Civil Engineering</option>
+                <option th:value="Mechanical_Engineering">Mechanical Engineering</option>
+                <option th:value="Electrical_Engineering">Electrical Engineering</option>
+                <option th:value="Electronics_Engineering">Electronics Engineering</option>
+
+            </select>
+
+            <select class="form-select mb-2" aria-label="Default select example" name="studyYear" th:field="*{course}">
+                <option th:value="Select_Year" selected>Select course</option>
                 <option th:value="First_Year">First Year</option>
                 <option th:value="Second_Year">Second Year</option>
                 <option th:value="Third_Year">Third Year</option>
                 <option th:value="Fourth_Year">Fourth Year</option>
+
             </select>
             <div class="form-floating">
                 <input type="password" name="password" id="password" class="form-control" placeholder="Password" th:field="*{password}">
@@ -167,21 +179,21 @@
 <div class="row m-2" th:fragment="Faculty_registration2">
     <div class="col-md-6 offset-md-3 rounded loginContainer p-5">
         <h3 class="text-center text-Success">REGISTRATION</h3>
-        <form th:action="@{/home/faculty/registrationDetails}" method="post">
+        <form th:action="@{/home/faculty/registrationDetails}" method="post" th:object="${faculty}">
             <div class="form-floating mb-2">
-                <input type="text" name="facId" id="facId" class="form-control" placeholder="BT24F06F006">
+                <input type="text" name="facId" id="facId" class="form-control" placeholder="BT24F06F006" th:field="*{facultyId}">
                 <label for="facId">Enter faculty Id</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="text" name="name" id="name" class="form-control" placeholder="FullName">
+                <input type="text" name="name" id="name" class="form-control" placeholder="FullName" th:field="*{name}">
                 <label for="name">Enter Your Full Name</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="email" name="email" id="email" class="form-control" placeholder="example@gmail.com">
-                <label for="email">Enter Your University Registered Email</label>
+                <input type="email" name="email" id="email" class="form-control" placeholder="example@gmail.com" th:field="*{email}">
+                <label for="email">Enter Your  Email</label>
             </div>
             <div class="form-floating">
-                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+                <input type="password" name="password" id="password" class="form-control" placeholder="Password" th:field="*{password}">
                 <label for="password">Enter Password</label>
             </div>
             <div class="row mt-3">
