--- a/src/main/resources/templates/Fragments/StudentFragments.html
+++ b/src/main/resources/templates/Fragments/StudentFragments.html
@@ -7,6 +7,28 @@
 <body>
 
 
+
+
+
+<!--Student Menu Fragment Start-->
+
+<div class="container rounded border border-1 border-dark p-2 " th:fragment="StudentMenu">
+    <h3 class="text-center text-dark">MENU</h3>
+    <div class="d-flex justify-content-center align-items-center flex-wrap">
+        <div class="text-center mx-1 mb-1"><a th:href="@{/student/subjects}" class="btn btn-success">Subjects</a></div>
+        <div class="text-center mx-1 mb-1"><a th:href="@{/student/exams}" class="btn btn-success">Exams</a></div>
+        <div class="text-center mx-1 mb-1"><a th:href="@{/student/attendance}" class="btn btn-success">Attendance</a></div>
+        <div class="text-center mx-1 mb-1"><a th:href="@{/student/query}" class="btn btn-success">Query</a></div>
+    </div>
+</div>
+<!--Student Menu Fragment End-->
+
+
+
+
+
+
+
 <!--Student Profile Fragment Start-->
 <div class="divContainer m-4 p-3" th:fragment="StudentProfile">
     <div class="row ">
@@ -64,16 +86,16 @@
                         <input type="text" class="form-control" id="address" placeholder="something" th:field="*{address}">
                         <label for="address">Email your address</label>
                     </div>
-                    <select class="form-select mb-2" aria-label="Default select example" name="department" th:field="*{department}">
-                        <option th:value="Select_Year" selected>Select Department</option>
-                        <option th:value="Information_Technology">Information Technology</option>
-                        <option th:value="Computer_Science_Engineering">Computer Science and Engineering</option>
-                        <option th:value="Civil_Engineering">Civil Engineering</option>
-                        <option th:value="Mechanical_Engineering">Mechanical Engineering</option>
-                        <option th:value="Electrical_Engineering">Electrical Engineering</option>
-                        <option th:value="Electronics_Engineering">Electronics Engineering</option>
+<!--                    <select class="form-select mb-2" aria-label="Default select example" name="department" th:field="*{department}">-->
+<!--                        <option th:value="Select_Year" selected>Select Department</option>-->
+<!--                        <option th:value="Information_Technology">Information Technology</option>-->
+<!--                        <option th:value="Computer_Science_Engineering">Computer Science and Engineering</option>-->
+<!--                        <option th:value="Civil_Engineering">Civil Engineering</option>-->
+<!--                        <option th:value="Mechanical_Engineering">Mechanical Engineering</option>-->
+<!--                        <option th:value="Electrical_Engineering">Electrical Engineering</option>-->
+<!--                        <option th:value="Electronics_Engineering">Electronics Engineering</option>-->
 
-                    </select>
+<!--                    </select>-->
 
                     <select class="form-select mb-2" aria-label="Default select example" name="studyYear" th:field="*{course}">
                         <option th:value="Select_Year" selected>Select course</option>
@@ -101,15 +123,7 @@
             <p class="text-center m-1"><a class="text-decoration-none text-danger" href="">Password Update</a></p>
         </div>
     </div>
-    <div class="container rounded border border-1 border-dark p-2 ">
-        <h3 class="text-center text-dark">MENU</h3>
-        <div class="d-flex justify-content-center align-items-center flex-wrap">
-            <div class="text-center mx-1 mb-1"><a th:href="@{/student/subjects}" class="btn btn-success">Subjects</a></div>
-            <div class="text-center mx-1 mb-1"><a th:href="@{/student/exams}" class="btn btn-success">Exams</a></div>
-            <div class="text-center mx-1 mb-1"><a th:href="@{/student/attendance}" class="btn btn-success">Attendance</a></div>
-            <div class="text-center mx-1 mb-1"><a th:href="@{/student/query}" class="btn btn-success">Query</a></div>
-        </div>
-    </div>
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
     <div class="container rounded border border-1 border-dark p-2 mt-2">
         <h3 class="text-center text-dark">DEPARTMENT DETAILS</h3>
         <div >
@@ -128,8 +142,11 @@
 
 <!--Student Subject fragment Start-->
 <div class="divContainer m-4 p-3" th:fragment="StudentSubjects">
-    <p class="text-warning bg-dark">&nbsp; Note : You can registere upto 6 subjects for this semester.</p>
-    <div>
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
+    <hr>
+    <p class="text-warning bg-dark mt-1">&nbsp; Note : You can registere upto 6 subjects for this semester.</p>
+    <p th:if="${Request == 'Yes'}"><span class="text-center text-success">Your Subject registration has been sent to the respective faculty.</span></p>
+        <div class="table-responsive">
         <h3 class="text-center text-primary">AVAILABLE SUBJECTS</h3>
         <table class="m-2 table table-bordered">
             <thead>
@@ -138,23 +155,25 @@
                 <th scope="col">Name</th>
                 <th scope="col">Id</th>
                 <th scope="col">Credits</th>
+                <th scope="col">Teacher</th>
                 <th scope="col">Register</th>
             </tr>
             </thead>
             <tbody class="text-center">
-            <tr>
-                <td>1</td>
-                <td>CMS</td>
-                <td>IT002</td>
-                <td>4</td>
-                <td><a href="" class="btn btn-primary">Add</a></td>
+            <tr th:each="subject,iteration : ${subjects}">
+                <td th:text="${iteration.count}">1</td>
+                <td th:text="${subject.name}">CMS</td>
+                <td th:text="${subject.subId}">IT002</td>
+                <td th:text="${subject.credits}">4</td>
+                <td th:text="${subject.faculty.name}">4</td>
+                <td ><a th:href="@{/student/subjects/register(sId=${subject.id})}" class="btn btn-primary">Add</a></td>
             </tr>
             </tbody>
         </table>
     </div>
     <br>
     <hr>
-    <div class="mt-2">
+    <div class="mt-2 table-responsive">
         <h3 class="text-center text-primary">REGISTERED SUBJECTS</h3>
         <table class="m-2 table table-bordered">
             <thead>
@@ -163,16 +182,43 @@
                 <th scope="col">Name</th>
                 <th scope="col">Id</th>
                 <th scope="col">Credits</th>
-                <th scope="col">Registration Date</th>
+                <th scope="col">Teacher</th>
             </tr>
             </thead>
             <tbody class="text-center">
-            <tr>
-                <td>1</td>
-                <td>CMS</td>
-                <td>IT002</td>
-                <td>4</td>
-                <td>15/02/2024</td>
+            <tr th:each="subject,iteration : ${registeredSubjects}">
+                <td th:text="${iteration.count}">1</td>
+                <td th:text="${subject.name}">CMS</td>
+                <td th:text="${subject.subId}">IT002</td>
+                <td th:text="${subject.credits}">4</td>
+                <td th:text="${subject.faculty.name}">4</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <br>
+    <hr>
+    <div class="mt-2 table-responsive">
+        <h3 class="text-center text-primary">SUBJECT REGISTRATION STATUS</h3>
+        <table class="m-2 table table-bordered">
+            <thead>
+            <tr class="text-center">
+                <th scope="col">Sr. No.</th>
+                <th scope="col">Name</th>
+                <th scope="col">Id</th>
+                <th scope="col">Credits</th>
+                <th scope="col">Teacher</th>
+                <th scope="col">Status</th>
+            </tr>
+            </thead>
+            <tbody class="text-center">
+            <tr th:each="request,iteration : ${RegistrationStatus}">
+                <td th:text="${iteration.count}">1</td>
+                <td th:text="${request.subject.name}">CMS</td>
+                <td th:text="${request.subject.subId}">IT002</td>
+                <td th:text="${request.subject.credits}">4</td>
+                <td th:text="${request.subject.faculty.name}">4</td>
+                <td th:text="${request.status}">4</td>
             </tr>
             </tbody>
         </table>
@@ -186,7 +232,9 @@
 
 <!--Student exam fragment start-->
 <div class="divContainer m-4 p-3" th:fragment="StudentExams">
-    <div class="table-responsive">
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
+    <hr>
+    <div class="table-responsive mt-1">
         <h3 class="text-center text-primary">EXAM DATA</h3>
         <table class="m-2 table table-bordered">
             <thead>
@@ -199,18 +247,20 @@
                 <th scope="col">Internal<br> <span class="fw-lighter fs-6">Out Of 10</span></th>
                 <th scope="col">End Semester<br> <span class="fw-lighter fs-6">Out Of 60</span></th>
                 <th scope="col">Grade</th>
+                <th scope="col">Exam Date</th>
             </tr>
             </thead>
             <tbody class="text-center">
-            <tr>
-                <td>1</td>
-                <td>CMS</td>
-                <td>IT0002</td>
-                <td>13</td>
-                <td>12</td>
-                <td>9</td>
-                <td>45</td>
-                <td>A</td>
+            <tr th:each="score,index :${scores}">
+                <td th:text="${index.count}">1</td>
+                <td th:text="${score.subject.name}">CMS</td>
+                <td th:text="${score.subject.subId}">IT0002</td>
+                <td th:text="${score.ct1}">13</td>
+                <td th:text="${score.ct2}">12</td>
+                <td th:text="${score.internal}">9</td>
+                <td th:text="${score.endSem}">45</td>
+                <td th:text="${score.grade}">A</td>
+                <td th:text="${score.examDate}">A</td>
             </tr>
             </tbody>
         </table>
@@ -224,7 +274,9 @@
 
 <!--Student attendance fragment Start-->
 <div class="divContainer m-4 p-3" th:fragment="StudentAttendance">
-    <div class="table-responsive">
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
+    <hr>
+    <div class="table-responsive mt-1">
         <h3 class="text-center text-primary">ATTENDANCE DATA</h3>
         <table class="m-2 table table-bordered">
             <thead>
@@ -232,7 +284,7 @@
                 <th scope="col">Sr. No.</th>
                 <th scope="col">Subject Name</th>
                 <th scope="col">Subject Id</th>
-                <th scope="col">Total Clases</th>
+                <th scope="col">Total Classes</th>
                 <th scope="col">Classes Attended</th>
                 <th scope="col">% Attendance</th>
                 <th scope="col">Updated On</th>
@@ -240,15 +292,15 @@
             </tr>
             </thead>
             <tbody class="text-center">
-            <tr>
-                <td>1</td>
-                <td>CMS</td>
-                <td>IT0002</td>
-                <td>13</td>
-                <td>12</td>
-                <td>80</td>
-                <td>04/02/2024</td>
-                <td>Abc</td>
+            <tr th:each="attendance,index : ${attendances}">
+                <td th:text="${index.count}">1</td>
+                <td th:text="${attendance.subject.name}">CMS</td>
+                <td th:text="${attendance.subject.subId}">IT0002</td>
+                <td th:text="${attendance.totalClasses}">13</td>
+                <td th:text="${attendance.presentClasses}">12</td>
+                <td th:text="${attendance.presentPercentage}">80</td>
+                <td th:text="${attendance.updatedDate}">04/02/2024</td>
+                <td th:text="${attendance.subject.faculty.name}">Abc</td>
             </tr>
             </tbody>
         </table>
@@ -262,7 +314,9 @@
 
 <!--Student query fragment Start-->
 <div class="divContainer m-4 p-3" th:fragment="StudentQuery">
-    <div class="container">
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
+    <hr>
+    <div class="container mt-1">
         <h3 class="text-center text-primary">ENTER YOUR QUERY</h3>
         <P class="text-center text-dark">Your query will be sent to your respective class teacher.</P>
         <form action="">
@@ -320,7 +374,9 @@
 
 <!--Student view query fragment Start-->
 <div class="divContainer m-4 p-3" th:fragment="viewQuery">
-    <div class="container">
+    <div th:replace="~{Fragments/StudentFragments :: StudentMenu}"></div>
+    <hr>
+    <div class="container mt-1">
         <h3 class="text-center text-primary"> QUERY DATA</h3>
         <p class="text-primary fw-bold">Query Subject : <span class="font-monospace text-dark fst-normal">dfdgsdfgsdfg</span></p>
         <p class="text-primary fw-bold">Query : <span class="font-monospace text-dark fst-normal">dfgdfgdfgdfg</span></p>
